fixed the nav menu shifting the view

--- a/Practice Website/resources/css/queries.css
+++ b/Practice Website/resources/css/queries.css
@@ -56,7 +56,7 @@
     }
     .hero-text-box h1{
         font-size: 220%;
-        
+        height: 100%;
     }
     
     blockquote {
